...
class NotificationListView extends HookConsumerWidget with AssetImagePath {
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final asyncValue = ref.watch(notificationListReducer);
    return Scaffold(
      appBar: AppBar(
        title: const Text('お知らせ'),
      ),
      body: asyncValue.when(
        data: (entities) => entities.isNotEmpty
            ? Scrollbar(
                child: ListView.builder(
                  key: UniqueKey(),
...
  Widget _emptyListView() {
    return Center(
      child: Column(
        mainAxisSize: MainAxisSize.min,
        children: const [
          Text(
            'お知らせがありません',
            style: TextStyle(
              color: Colors.black54,
              fontSize: 16,
            ),
          ),
        ],
...
